# CLT

./: .gitignore  README.md  main.py  pyproject.toml
src/probing/: dataset_generator.py  probe.py  probing.ipynb  train.py  train_probes.ipynb
src/probing/data/: cmv_processor.py  corpus_collection.py  dataset_collection.py  dataset_generation.py  probing_dataset.py
src/probing/data/probing/: analysis.ipynb  probing_dataset.py
src/probing/schemas/: response.py
src/prompts/: system.py
