[project]
name = "thesis-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "kagglehub>=0.3.13",
    "pydantic>=2.10.6",
    "transformer-lens>=2.16.1",
]
